add lambda and gateway for getting products

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ plugins:
 
 custom:
   client:
-    bucketName: my-store-app
+    bucketName: my-store-app-noemi-2025
     distributionFolder: dist
   s3BucketName: ${self:custom.client.bucketName}
 
