--- a/lambdas/product/package.json
+++ b/lambdas/product/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "dist/getProductsList.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --config jest.config.js"
   },
   "dependencies": {},
   "devDependencies": {
