--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^14.2.1",
+		"@types/jest": "^30.0.0",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -54,12 +55,14 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.30.1",
+		"jest": "^29.7.0",
 		"jsdom": "^20.0.0",
 		"msw": "^0.43.1",
 		"prettier": "2.7.1",
 		"serverless": "^3.20.0",
 		"serverless-finch": "^4.0.0",
 		"serverless-s3-cleaner": "^2.0.1",
+		"ts-jest": "^29.4.6",
 		"typescript": "^4.7.4",
 		"vite": "^2.9.13",
 		"vitest": "^0.17.1"
